# 0x25b-webui-cpp-boilerplate

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
src/backend/: main.cpp  vfs.h  vfs.py
src/backend/features/arguments/: arguments.cpp  arguments.h
src/backend/features/arguments/models/: arguments_model.h
src/backend/features/database/: database.cpp  database.h
src/backend/features/logging/: logger.cpp  logger.h
src/backend/features/note/: note.cpp  note.h  note_routes.cpp  note_routes.h
src/backend/features/note/models/: note_model.h
src/backend/features/note/routes/: note_routes.cpp
src/backend/features/note/services/: note.cpp  note.h  note_database.cpp  note_database.h
src/backend/features/utils/: make_response.cpp  make_response.h  validate_field.cpp  validate_field.h
src/backend/features/webui/: webui.cpp  webui.h
src/backend/features/webui/models/: webui_model.h
src/backend/features/webui/routes/: webui_routes.cpp  webui_routes.h
src/backend/features/webui/services/: webui_database.cpp  webui_database.h
src/backend/features/webui/state/: webui_state.h
src/frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/.storybook/: preview.ts
src/frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  webui.d.ts
src/frontend/src/components/: all-notes.tsx  create-note.tsx  delete-by-id.tsx  note.tsx  read-by-id.tsx  update-note.tsx
src/frontend/src/routes/: __root.tsx  index.tsx
src/frontend/src/routes/note/: create.tsx  delete.tsx  read.tsx  route.tsx  update.tsx
src/frontend/src/routes/settings/: route.tsx  settings.tsx
src/frontend/src/services/query-client/: query-client.tsx
src/frontend/src/services/webui/: note-create.ts  note-delete.ts  note-get-all.ts  note-read-by-id.ts  note-update.ts  webui-read-settings.ts  webui-update-kiosk.ts  webui-update-pos.ts  webui-update-size.ts
src/frontend/src/services/webui/models/: response.ts  settings.ts
src/frontend/src/stories/: all-notes.stories.ts  badge.stories.ts  badge.tsx  button.stories.ts  button.tsx  card.stories.ts  card.tsx  input.stories.ts  input.tsx  label.stories.ts  separator.stories.ts  separator.tsx  textarea.stories.ts  textarea.tsx
